wrap all and costomized

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -38,15 +38,20 @@
         <nav id="navbar" class="navbar">
             <ul>
                 <li><a class="active " href="index.html">Home</a></li>
-                <li><a href="#">Log In</a></li>
+                <li style="cursor: pointer;color: white"><a><span class="HomeLogin">Log In</span></a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
+
 
     </div>
 </header><!-- End Header -->
 
 <!-- ======= Hero Section ======= -->
+<!--=====================================================================
+                                  Home Page
+======================================================================-->
+<main>
 <section id="hero" class="d-flex justify-cntent-center align-items-center">
     <div id="heroCarousel" class="container carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
@@ -86,16 +91,8 @@
         </a>
 
     </div>
-</section><!-- End Hero -->
-
-
-
-
-
-
-
-
-
+</section>
+<!-- End Hero -->
 
 
 
@@ -174,7 +171,16 @@
 
     </div>
 </section><!-- End Services Section -->
+</main> <!--end HomePagemain-->
 
+<!--=====================================================================
+                                  Admin Control Page
+======================================================================-->
+
+
+
+<script src="assets/js/jquery-3.6.1.min.js"></script>
+<script src="assets/js/navigations.js"></script>
 
 <!-- Vendor JS Files -->
 <script src="assets/vendor/aos/aos.js"></script>
