--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -18,6 +18,7 @@
 
     <!-- Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
 <body>
@@ -30,7 +31,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
         <div class="logo">
-            <h1 class="text-light"><a href="index.html"><span>BCataLog</span></a></h1>
+            <h1 class="text-light"><a href="index.html" id="mainHomeTitle"><span>BCataLog</span></a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
         </div>
@@ -51,7 +52,7 @@
 <!--=====================================================================
                                   Home Page
 ======================================================================-->
-<main>
+<main id="HomepageHome">
 <section id="hero" class="d-flex justify-cntent-center align-items-center">
     <div id="heroCarousel" class="container carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
@@ -112,7 +113,7 @@
         <div class="row">
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                 <div class="icon-box">
-                    <div class="icon"><img  class="carCardMainImg" alt ="" src="assets/images/book1C.jpg"
+                    <div class="icon"><img  class="bookCardMainImg" alt ="" src="assets/images/book1C.jpg"
                                             style="width: 200px;height: 248px;"></i></div>
                     <h4><a href="">Lorem Ipsum</a></h4>
                     <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
@@ -121,7 +122,7 @@
 
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box">
-                    <div class="icon"><img  class="carCardMainImg" alt ="" src="assets/images/book2.jpg"
+                    <div class="icon"><img  class="bookCardMainImg" alt ="" src="assets/images/book2.jpg"
                                             style="width: 200px;height: 248px;"></i></div>
                     <h4><a href="">Sed ut perspici</a></h4>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
@@ -130,7 +131,7 @@
 
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
                 <div class="icon-box">
-                    <div class="icon"><img  class="carCardMainImg" alt ="" src="assets/images/book3.jpg"
+                    <div class="icon"><img  class="bookCardMainImg" alt ="" src="assets/images/book3.jpg"
                                             style="width: 200px;height: 248px;"></i></div>
                     <h4><a href="">Magni Dolores</a></h4>
                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
@@ -139,13 +140,15 @@
 
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
                 <div class="icon-box">
-                    <div class="icon"><i class="bx bx-layer"></i></div>
+                    <div class="icon"><img  class="bookCardMainImg" alt ="" src="assets/images/book3.jpg"
+                                            style="width: 200px;height: 248px;"></i></div>
                     <h4><a href="">Nemo Enim</a></h4>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                 </div>
             </div><div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box">
-                    <div class="icon"><i class="bx bx-file"></i></div>
+                    <div class="icon"><img  class="bookCardMainImg" alt ="" src="assets/images/book3.jpg"
+                                            style="width: 200px;height: 248px;"></i></div>
                     <h4><a href="">Sed ut perspici</a></h4>
                     <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
                 </div>
@@ -153,7 +156,8 @@
 
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
                 <div class="icon-box">
-                    <div class="icon"><i class="bx bx-tachometer"></i></div>
+                    <div class="icon"><img  class="bookCardMainImg" alt ="" src="assets/images/book1C.jpg"
+                                            style="width: 200px;height: 248px;"></div>
                     <h4><a href="">Magni Dolores</a></h4>
                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                 </div>
@@ -161,7 +165,8 @@
 
             <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
                 <div class="icon-box">
-                    <div class="icon"><i class="bx bx-layer"></i></div>
+                    <div class="icon"><img  class="bookCardMainImg" alt ="" src="assets/images/book3.jpg"
+                                            style="width: 200px;height: 248px;"></i></div>
                     <h4><a href="">Nemo Enim</a></h4>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
                 </div>
@@ -177,6 +182,291 @@
                                   Admin Control Page
 ======================================================================-->
 
+<main id="HomepageAdmin">
+    <main id="adminHeaderMain">
+
+
+        <!-- ======= Sidebar ======= -->
+        <aside class="sidebar" id="sidebar">
+
+            <ul class="sidebar-nav" id="sidebar-nav">
+                <li class="nav-item" id="adDash">
+                    <a class="nav-link ">
+                        <i class="bi bi-grid"></i>
+                        <span>Dashboard</span>
+                    </a>
+                </li><!-- End Dashboard Nav -->
+
+
+                <li class="nav-heading">Pages</li>
+
+
+
+                <li class="nav-item">
+                    <a class="nav-link collapsed" data-bs-target="#book-nav" data-bs-toggle="collapse">
+                        <i class="fa-solid fa-book-rear"></i><span>Book Manage</span><i
+                            class="bi bi-chevron-down ms-auto"></i>
+                    </a>
+                    <ul class="nav-content collapse " data-bs-parent="#sidebar-nav" id="book-nav">
+                        <li id="adViewAddBook">
+                            <a>
+                                <i class="bi bi-circle"></i><span>Add Book</span>
+                            </a>
+                        </li>
+                        <li id="adViewBookView">
+                            <a>
+                                <i class="bi bi-circle"></i><span>View Book</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li><!-- End Book Nav -->
+
+
+            </ul>
+        </aside>
+
+     <!--========================================================================
+                                DASHBOARD
+     ============================================================================-->
+        <main id="adminDashboard">
+            <main class="main" id="adminDashboardMain">
+
+                <div class="pagetitle">
+                    <h1>Dashboard</h1>
+                    <nav>
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                            <li class="breadcrumb-item active">Dashboard</li>
+                        </ol>
+                    </nav>
+                </div><!-- End Page Title -->
+
+                <section class="section dashboard">
+                    <div class="row">
+
+                        <!-- Left side columns -->
+                        <div class="col-lg-12">
+                            <div class="row">
+
+                                <!--Load BOOKS-->
+
+                            </div>
+                        </div><!-- End Left side columns -->
+                    </div>
+                </section>
+
+            </main><!-- End #main -->
+        </main>
+
+    </main>
+
+    <!--========================================================================
+                                 Add BOOKS
+ ============================================================================-->
+    <main id="adminAddBook">
+        <main class="main" id="adminBookAdd">
+
+            <div class="container">
+                <section
+                        class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-12 col-md-6 d-flex flex-column align-items-center justify-content-center">
+
+                                <div class="card mb-3">
+
+                                    <div class="card-body">
+
+                                        <div class="pt-4 pb-2">
+                                            <h5 class="card-title text-center pb-0 fs-4">Add Book</h5>
+                                        </div>
+
+                                        <div class="d-flex align-items-end flex-column bd-highlight pb-4">
+                                            <!--View btn-->
+                                            <div>
+                                                <button class="btn btn-primary w-100" id="bookAddViewBook"
+                                                        type="submit">View Books
+                                                </button>
+                                            </div>
+                                        </div>
+
+                                        <form class="row g-3" name="form1">
+
+                                          <!--ID Auto Generated-->
+
+                                            <!--Category-->
+                                            <div class="form-group col-md-6 mb-3">
+                                                <input aria-label="Disabled input example" class="form-control mb-3"
+                                                       id="save_book_category"
+                                                       name="category"
+                                                       placeholder="Book Category" type="text">
+                                            </div>
+
+                                            <!--Title-->
+                                            <div class="form-group col-md-6 mb-3">
+                                                <input aria-label="Disabled input example" class="form-control mb-3"
+                                                       id="save-book-title"
+                                                       placeholder="Book Title" type="text">
+                                            </div>
+
+
+                                            <!--Author-->
+                                            <div class="form-group col-md-6 mb-3">
+                                                <input aria-label="Disabled input example" class="form-control mb-3"
+                                                       id="save-book-author"
+                                                       placeholder="Author" type="text">
+                                            </div>
+
+                                            <!--Price-->
+                                            <div class="form-group col-md-6 mb-3">
+                                                <input aria-label="Disabled input example" class="form-control mb-3"
+                                                       id="save-book-Price"
+                                                       placeholder="Price" type="text">
+                                            </div>
+
+
+
+                                            <div class=" col-md-6 mb-3">
+
+                                            </div>
+
+                                            <div class="form-group col-md-12 mb-3">
+                                                <label class="form-label fw-bold">Book Image</label>
+                                                <input class="form-control bookView" id=bookView"
+                                                       name="bookView" type="file">
+                                            </div>
+
+
+
+
+                                            <!--Add btn-->
+                                            <div class="col-12">
+                                                <button class="btn btn-primary w-100" id="btnAdminAddBook" type="button">Add
+                                                    Book
+                                                </button>
+                                            </div>
+
+                                        </form>
+
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </section>
+
+            </div>
+
+
+        </main>
+    </main>
+
+
+    <!--========================================================================
+                                    View All BOOKS
+    ============================================================================-->
+    <main id="adminViewAllBook">
+        <main class="main" id="adminViewBookSpa">
+
+            <div class="pagetitle">
+                <h1>View Books</h1>
+            </div><!-- End Page Title -->
+
+            <!--Add Search Bar-->
+
+
+            <form id="bookViewForm" style="margin-left: 5px; margin-top: 44px;">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="form-groupCF">
+                            <input class="form-control" disabled id="update-book-Id" placeholder="Registration Id"
+                                   type="text">
+                            <span class="control-error" id="lblBReg"></span>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+
+
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="form-groupMRT">
+                            <input class="form-control" id="update-book-category" placeholder="Category" type="text">
+                            <span class="control-error" id="lblBCategory"></span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-groupNFP">
+                            <input class="form-control" id="update-book-Title" placeholder="Book Title"
+                                   type="text">
+                            <span class="control-error" id="lblBTitle"></span>
+                        </div>
+                    </div>
+                </div>
+                <br>
+
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="form-groupMRT">
+                            <input class="form-control" id="update-book-Author" placeholder="Book Author" type="text">
+                            <span class="control-error" id="lblAuthor"></span>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="form-groupFT">
+                            <input class="form-control" id="update-book-price" placeholder="price" type="text">
+                            <span class="control-error" id="lblBPrice"></span>
+                        </div>
+                    </div>
+
+                </div>
+                <br>
+
+            </form>
+
+            <div class="row">
+                <div class="col-sm-3" style="margin-left: 9px">
+                    <button class="btn btn-primary" id="btnUpdateBook"
+                            style="background-color: navy;color: white; border: none">Update
+                    </button>
+                </div>
+
+                <div class="col-sm-3" style="margin-left: -152px">
+                    <button class="btn btn-primary" id="btnDeleteBook"
+                            style="background-color: orangered;color: white; border: none">Delete
+                    </button>
+                </div>
+            </div>
+
+            <div class="card top-selling overflow-auto mt-5">
+
+                <div class="card-body pb-0">
+
+                    <table class="table table-borderless">
+                        <thead>
+                        <tr>
+                            <th scope="col">Reg Id</th>
+                            <th scope="col">Category</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Author</th>
+                            <th scope="col">Price</th>
+                        </tr>
+                        </thead>
+                        <tbody id="admin-view-book">
+                        </tbody>
+
+                    </table>
+                </div>
+            </div>
+        </main><!-- End #main -->
+    </main>
+
+
+</main>
 
 
 <script src="assets/js/jquery-3.6.1.min.js"></script>
@@ -193,6 +483,7 @@
 
 <!--Main JS File -->
 <script src="assets/js/main.js"></script>
+<script src="assets/js/adminNav.js"></script>
 
 </body>
 </html>
