Book Add Completed with images

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -294,6 +294,14 @@
 
                                           <!--ID Auto Generated-->
 
+                                            <!--id-->
+                                            <div class="form-group col-md-6 mb-3">
+                                                <input aria-label="Disabled input example" class="form-control mb-3"
+                                                       id="save_book_Id"
+                                                       name="bookId"
+                                                       placeholder="Book ID" type="text">
+                                            </div>
+
                                             <!--Category-->
                                             <div class="form-group col-md-6 mb-3">
                                                 <input aria-label="Disabled input example" class="form-control mb-3"
@@ -484,6 +492,7 @@
 <!--Main JS File -->
 <script src="assets/js/main.js"></script>
 <script src="assets/js/adminNav.js"></script>
+<script src="controller/bookController.js"></script>
 
 </body>
 </html>
