Completed car load and update frontend

--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -462,6 +462,7 @@
                             <th scope="col">Title</th>
                             <th scope="col">Author</th>
                             <th scope="col">Price</th>
+                            <th scope="col">Image</th>
                         </tr>
                         </thead>
                         <tbody id="admin-view-book">
