--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -32,7 +32,6 @@
 
         <div class="logo">
             <h1 class="text-light"><a href="index.html" id="mainHomeTitle"><span>BCataLog</span></a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
         </div>
 
@@ -107,12 +106,15 @@
 
         <div class="section-title">
             <h2>All Books</h2>
-            <div class="input-group rounded" style="width: 20vw;">
-                <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-                <span class="input-group-text border-0" id="search-addon">
-    <i class="fas fa-search"></i>
-  </span>
+            <div class="row">
+
             </div>
+            <div class="input-group rounded" style="width: 20vw;">
+                <input id="searchInput" aria-describedby="search-addon" aria-label="Search" class="form-control rounded" placeholder="Search"
+                       type="search"/>
+                <span class="input-group-text border-0" id="search-addon">
+            </div>
+
 
         </div>
 
