--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -204,7 +204,42 @@
                         <div class="col-lg-12">
                             <div class="row">
 
-                                <!--Load BOOKS-->
+
+                                <!--ffffff-->
+
+                                <section id="services" class="services section-bg">
+                                    <div class="container" data-aos="fade-up">
+
+                                        <div class="section-title">
+                                            <h2>All Books</h2>
+                                            <div class="row">
+
+                                            </div>
+                                            <div class="input-group rounded" style="width: 20vw;">
+                                                <input id="searchInput2" aria-describedby="search-addon2" aria-label="Search" class="form-control rounded" placeholder="Search"
+                                                       type="search"/>
+                                                <span class="input-group-text border-0" id="search-addon2">
+                                            </div>
+
+
+                                        </div>
+
+                                        <div id="bookCardContainer2" class="row">
+                                           <!-- <div class="col-xl-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                                                <div class="icon-box">
+                                                    <div class="icon"><img  class="bookCardMainImg" alt ="" src="assets/images/book1C.jpg"
+                                                                            style="width: 200px;height: 248px;"></i></div>
+                                                    <h4><a href="">Lorem Ipsum</a></h4>
+                                                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                                                </div>
+                                            </div>-->
+
+                                        </div>
+
+                                    </div>
+                                </section>
+
+
 
                             </div>
                         </div><!-- End Left side columns -->
